--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgb(238,238,238);
+  background: radial-gradient(circle, rgb(229, 229, 229) 0%, rgb(199, 199, 199) 50%, rgb(229, 229, 229) 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.image {
+  height: 40px;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.image.last {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.image.first {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+
+.button-links {
+  text-transform: capitalize !important;
+  text-decoration: none !important;
+}
+
+.over-particles {
+  position: relative;
+  z-index: 1;
+}
+
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 30px;
+  height: 30px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 3px;
+  width: 6px;
+  background: #fff;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 3px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 12px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 21px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 3px;
+    height: 11px;
   }
-  to {
-    transform: rotate(360deg);
+  50%, 100% {
+    top: 8px;
+    height: 12px;
   }
+}
+
+.v-margin24 {
+  margin: 24px 0;
+}
+
+.width100{
+  width: 100%;
 }
